syntax = "proto3";

package User;

service UserService {
    rpc CreateUser(User) returns (Empty);
    rpc GetUserById(UserId) returns (User);
    rpc DeleteById(UserId) returns (Empty);
    rpc UpdateUser(User) returns (Empty);
}

message UserId{
    string id = 1;
}
message Empty {}

message User {
    string id = 1;
    string calendar_id = 2;
    string first_name = 3;
    string last_name = 4;
    string gender = 5;
    repeated string phone_numbers = 6;
    string email = 7;
    string status = 8;
    string payment_card = 9;
    string created_at = 10;
    string updated_at = 11;
    string deleted_at = 12;
}